--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,29 +1,17 @@
-<p id="notice"><%= notice %></p>
+<h1>Listing Movies</h1>
 
-<h1>Movies</h1>
+<%= link_to "New Movie", new_movie_path %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<hr>
 
-  <tbody>
-    <% @movies.each do |movie| %>
-      <tr>
-        <td><%= movie.title %></td>
-        <td><%= movie.image %></td>
-        <td><%= link_to 'Show', movie %></td>
-        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Movie', new_movie_path %>
+<% @movies.each do |movie| %>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail thumb-box">
+      <h2 style="text-align: center;"><%= movie.title %></h2>
+      <%= image_tag(movie.image, size: "250x300") %>
+      <div class="caption" style="text-align: center;">
+       
+      </div>
+    </div>
+  </div>
+<% end %>
