--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,28 @@
   </head>
 
   <body>
+    
 
     <%= render "layouts/header" %>
     <div class="container">
       <%= yield %>
     </div>
-    
+    <div class="caption" style="text-align:center;">
+
+  <%= link_to like_movie_path(movie),  class: "like", method: :put do %>
+  <button type="button" class="btn btn-info" aria-label="Left Align">
+    <span class="glyphicon glyphicon-thumbs-up glyphicon-align-center" aria-hidden="true"></span>
+    <span class="badge"><%= movie.get_upvotes.size %></span>
+  </button>
+  <% end %>
+
+  <%= link_to dislike_movie_path(movie), class: "like", method: :put do %>
+  <button type="button" class="btn btn-info" aria-label="Left Align"> 
+    <span class="glyphicon glyphicon-thumbs-down glyphicon-align-center" aria-hidden="true"></span>
+    <span class="badge"><%= movie.get_downvotes.size %></span>
+  </button>  
+  <% end %>
+
+</div>
   </body>
 </html>
