--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -10,7 +10,20 @@
       <h2 style="text-align: center;"><%= movie.title %></h2>
       <%= image_tag(movie.image, size: "250x300") %>
       <div class="caption" style="text-align: center;">
-       
+         <%= link_to like_movie_path(movie),  class: "like", method: :put do %>
+              <button type="button" class="btn btn-info" aria-label="Left Align">
+                <span class="glyphicon glyphicon-thumbs-up glyphicon-align-center" aria-hidden="true"></span>
+                <span class="badge"><%= movie.get_upvotes.size %></span>
+              </button>
+            <% end %>
+
+            <%= link_to dislike_movie_path(movie), class: "like", method: :put do %>
+              <button type="button" class="btn btn-info" aria-label="Left Align"> 
+                <span class="glyphicon glyphicon-thumbs-down glyphicon-align-center" aria-hidden="true"></span>
+                <span class="badge"><%= movie.get_downvotes.size %></span>
+              </button>  
+            <% end %>
+
       </div>
     </div>
   </div>
